aau/sf_autobackup/objects/ps_Class_Meeting__c.object
<CustomObject>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Meeting_Number__c</fullName>
        <description>PeopleSoft&apos;s identifier to distinguish meeting patterns for the same class</description>
        <label>Class Meeting Number</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class_Section__c</fullName>
        <label>Class Section</label>
        <referenceTo>ps_Class__c</referenceTo>
        <relationshipName>Class_Meeting</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructor_1_Type__c</fullName>
        <label>Instructor 1 Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructor_2_Type__c</fullName>
        <label>Instructor 2 Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Psft_Ext__c</fullName>
        <externalId>true</externalId>
        <label>Psft_Ext_Id__c</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <label>Room</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Topic__c</fullName>
        <label>Special Topic</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <label>ps_Class Meeting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Class_Section__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Class Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ps_Class Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>